Report: draft Part 2 (The Scala 2.13 wall)
§4 Why Spark can't simply move to Scala 3:
  - Concrete failure mode (the TypeTag → runtime.universe → Array
    chain, ending in FatalError from ScalaReflection.<clinit>)
  - What it means for typical Spark code (every typed Dataset[T]
    operation fails on Scala 3)
  - Current workarounds (DataFrame escape, Frameless delegating to
    Spark, spark-scala3 working around but not solving)
  - Prior art: jsoniter-scala / circe / Frameless / magnolia all
    surveyed; this is the first published case study of a Scala 3
    compile-time UnsafeRow encoder

§5 The Scala 3 derivation story:
  - Mechanism 1: `inline match` on type tuples via Mirror — used
    for schema derivation (where boxing isn't on the hot path)
  - Mechanism 2: quoted.Expr macros — used for the per-row
    encode/decode path, can emit direct constructor calls without
    Mirror.fromProduct boxing (jsoniter-scala pattern)
  - Mechanism 3: Magnolia / chimney — mentioned, not used
  - What "no runtime reflection" buys: GraalVM native-image,
    cold-start savings, compile-time schema validation, inlined
    dispatch, Scala 3 unlock

~240 lines added, 491 total.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>